--- a/_pages/404.md
+++ b/_pages/404.md
@@ -6,7 +6,7 @@ sitemap: false
 permalink: /404.html/
 
 ---
-
+Sorry
 <script type="text/javascript">
   var GOOG_FIXURL_LANG = 'en';
   var GOOG_FIXURL_SITE = '{{ site.url }}'
